<resources>
    <string name="app_name">BarVolume</string>
    <string name="panjang">Panjang</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="masukkan_lebar">Masukkan Lebar</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="masukkan_tinggi">Masukkan Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil</string>
</resources>